fixed styling of lobby page - adding new white fonts/ spacing out category information into rows instead with more margin

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,12 @@ body {
     outline: none !important;
   }
 
+  .waiting {
+    color: white;
+    font-family: 'GT Walsheim Pro';
+
+  }
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
@@ -150,4 +156,10 @@ body {
     .questioncard {
         max-width: 300px
     }
+}
+
+@media (max-width: 485px) {
+  .flex-row {
+    flex-direction: column !important;
+  }
 }
